edited calls for accessing html
I was able to have the HTML files display, but need more time to get the images to display. Im looking up how to do so, but otherwise, the map and the bootstrap css work properly

--- a/map_app/templates/map.html
+++ b/map_app/templates/map.html
@@ -3,7 +3,7 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="index.html">
+    <a class="navbar-brand" href="/">
       <img src="images/FireFlight_logo_only.png" alt="Bootstrap" width="100" height="100">
 
     </a>
@@ -13,7 +13,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="test_file_copy.html">               
+          <a class="nav-link" href="/map">               
              <img src="images/map_image.png" alt="Bootstrap" width="100" height="100">
           </a>
         </li>
@@ -25,9 +25,9 @@
             Dropdown link
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="index.html">Action</a></li>
-            <li><a class="dropdown-item" href="index.html">Another action</a></li>
-            <li><a class="dropdown-item" href="index.html">Something else here</a></li>
+            <li><a class="dropdown-item" href="/">Action</a></li>
+            <li><a class="dropdown-item" href="/">Another action</a></li>
+            <li><a class="dropdown-item" href="/">Something else here</a></li>
           </ul>
         </li>
       </ul>
@@ -55,7 +55,7 @@
       </small>
     <div class="d-flex justify-content-center">
       <div class="dropdown">
-        <a href="test_file_copy.html" class="btn btn-secondary">
+        <a href="/map" class="btn btn-secondary">
           Refresh
         </a>
         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown">
