--- a/map_app/templates/index.html
+++ b/map_app/templates/index.html
@@ -2,7 +2,7 @@
 <html>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="/">
             <img src="images/FireFlight_logo_only.png" alt="Bootstrap" width="100" height="100">
 
           </a>
@@ -12,13 +12,10 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="test_file_copy.html">
+                  <a class="nav-link active" aria-current="page" href="/map">
                     <img src="images/map_image.png" alt="Bootstrap" width="100" height="100">
   
                   </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Pricing</a>
