--- a/map_app/templates/home.html
+++ b/map_app/templates/home.html
@@ -7,13 +7,21 @@
 {% block body %}
 {% load static %}
 
-<div>
 
-    <h1>Instructions</h1>
+<body>
+<h1>Instructions</h1>
+<p>Below, is an interactive tool that displays the health of an ecosystem.
+The heat map shows the amount of birds in a given area.  There are filters on the side of map that will allow for there 
+to be different aspects to be viewed seperately or together. Feel free to interact with our button here.  
+</p>
+</br>
+<a href="/map" class="btn btn-secondary" >
+    Map
+</a>
 
 
+</body>
 
-</div>
 
 
 
