--- a/map_app/templates/header.html
+++ b/map_app/templates/header.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="{% static 'style.css' %}">
     
     <!-- load favicon -->
-    <link rel="icon" type="image/png" href="{% static 'images/FireFlight_logo_only.png' %}">
+    <link rel="icon" type="image/png" href="{% static 'images/FireFlight_logo.PNG' %}">
 
 </head>
 
@@ -28,7 +28,7 @@
 
             <div class="navbar-brand">
                 <a href="/">
-                    <img src="{% static 'images/FireFlight_logo_only.png' %}" alt="FireFlight logo" width="100" height="100">
+                    <img src="{% static 'images/FireFlight_logo.PNG' %}" alt="FireFlight logo" width="100" height="100">
                 </a>
             </div>
 
