--- a/map_app/templates/map.html
+++ b/map_app/templates/map.html
@@ -9,15 +9,13 @@
 
 
 <div class = "col-md-6 mx-auto">
-    <iframe width="425" height="350" src="https://www.openstreetmap.org/export/embed.html?bbox=-117.93196678161623%2C33.80619926145449%2C-117.90898561477663%2C33.821067939638574&amp;layer=mapnik" style="border: 1px solid black"></iframe>
+    <iframe width="425" height="350" src="/enchanted-circle-map" style="border: 1px solid black"></iframe>
     
     <br/>
 
-    <small>
-        <a href="https://www.openstreetmap.org/#map=16/33.81363/-117.92048">View Larger Map</a>
-    </small>
-
     <div class="d-flex justify-content-center">
+
+        <a href="/enchanted-circle-map" class="btn btn-secondary mx-1">View Larger Map</a>
 
             <a href="/map" class="btn btn-secondary mx-1">
             Refresh
