--- a/map_app/templates/map.html
+++ b/map_app/templates/map.html
@@ -7,9 +7,12 @@
 {% block body %}
 {% load static %}
 
-
-<div class = "col-md-6 mx-auto">
-    <iframe width="425" height="350" src="/enchanted-circle-map" style="border: 1px solid black"></iframe>
+<div class = "col-md mx-auto">
+    
+    <div class="d-flex justify-content-center">
+        <iframe width="850" height="500" src="/enchanted-circle-map" style="border: 1px solid black"></iframe>
+    </div>
+    
     
     <br/>
 
@@ -25,10 +28,11 @@
                 Export Data
             </button>
 
+
             <button class="btn btn-secondary dropdown-toggle mx-1" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                 Bird Species
             </button>
-           
+            
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" >
                 <div class="list-group" style="height: 30vh; overflow-y: scroll;">
                     
@@ -43,6 +47,8 @@
 
                 </div>
             </div>
+
+            
   
 
 
