--- a/map_app/templates/home.html
+++ b/map_app/templates/home.html
@@ -9,15 +9,22 @@
 
 
 <body>
-<h1>Instructions</h1>
-<p>Below, is an interactive tool that displays the health of an ecosystem.
-The heat map shows the amount of birds in a given area.  There are filters on the side of map that will allow for there 
-to be different aspects to be viewed seperately or together. Feel free to interact with our button here.  
+<h1>Welcome!!!</h1>
+<p>
+    Welcome to the FireFlight project.  The main purpose of this project is to display accurate data regarding birds.
+    These bird populations indicate the health of an ecosystem.  The bigger the population of birds 
+    in an area, the healthier the ecosystem.  Below is a link to the map, feel free to navigate the map
+    accordingly.  If you wish to see some instructions about the map, feel free to navigate to the instructions 
+    page below.
 </p>
 </br>
 <a href="/map" class="btn btn-secondary" >
     Map
 </a>
+<a href="/Instructions" class="btn btn-secondary" >
+    Map
+</a>
+
 
 
 </body>
