--- a/map_app/templates/home.html
+++ b/map_app/templates/home.html
@@ -21,8 +21,8 @@
 <a href="/map" class="btn btn-secondary" >
     Map
 </a>
-<a href="/Instructions" class="btn btn-secondary" >
-    Map
+<a href="/instructions" class="btn btn-secondary" >
+    Instructions
 </a>
 
 
