--- a/map_app/templates/Instructions.html
+++ b/map_app/templates/Instructions.html
@@ -1,6 +1,6 @@
 {% extends 'header.html' %}
 
-{% block title %} Home {% endblock %}
+{% block title %} Instructions {% endblock %}
 {% block homeactive %} active {% endblock homeactive %}
 
 
@@ -24,3 +24,6 @@ the data that is being displayed.  Feel free to interact with our button here.
 
 
 </body>
+
+
+{% endblock %}
