--- a/map_app/templates/header.html
+++ b/map_app/templates/header.html
@@ -43,7 +43,7 @@
                 <ul class="navbar-nav mr-auto">
 
                     <li class="nav-item {% block homeactive %} {% endblock homeactive %} ">
-                        <a class="nav-link" href="/">Instructions<span class="sr-only"></span></a>
+                        <a class="nav-link" href="/instructions/">Instructions<span class="sr-only"></span></a>
                     </li>
 
                     <li class="nav-item {% block mapactive %} {% endblock mapactive %} ">
