--- a/map_app/templates/map.html
+++ b/map_app/templates/map.html
@@ -17,36 +17,44 @@
     <br/>
 
     <div class="d-flex justify-content-center">
+        <!-- Navigates to full map page -->
+        <a href="/enchanted-circle-map" class="btn btn-secondary mx-1">
+            View Larger Map
+        </a>
 
-        <a href="/enchanted-circle-map" class="btn btn-secondary mx-1">View Larger Map</a>
-
-            <a href="/map" class="btn btn-secondary mx-1">
+        <!-- Currently: Navigates to current page, refreshing and resetting everything
+             Goal: Change to "update", and will apply chosen options -->
+        <a href="/map" class="btn btn-secondary mx-1">
             Refresh
-            </a>
+        </a>
 
-            <button class="btn btn-secondary mx-1">
-                Export Data
-            </button>
+        <!-- Currently: does nothing
+             Goal: will export the data currently shown on the screen -->
+        <button class="btn btn-secondary mx-1">
+            Export Data
+        </button>
 
-
-            <button class="btn btn-secondary dropdown-toggle mx-1" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                Bird Species
-            </button>
-            
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" >
-                <div class="list-group" style="height: 30vh; overflow-y: scroll;">
-                    
-                    {% for bird in birds %}
-                    
-                    <label class="list-group-item">
-                        <input class="form-check-input me-1" type="checkbox" value=" {{bird.speciesID}} ">
-                        {{bird.species}}
-                    </label>  
+        <!-- Currently: shows drop down of all bird species
+             Goal: will actively select birds for display/export -->
+        <button class="btn btn-secondary dropdown-toggle mx-1" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+            Bird Species
+        </button>
+        
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" >
+            <div class="list-group" style="height: 30vh; overflow-y: scroll;">
                 
-                    {% endfor %}
+                {% for bird in birds %}
+                <!-- Currently: can choose any bird, list only stays up if the actual check box is selected.
+                     Goal: can choose only birds that are not protected, list stays up until box is selected again. -->
+                <label class="list-group-item">
+                    <input class="form-check-input me-1" type="checkbox" value=" {{bird.speciesID}} ">
+                    {{bird.species}}
+                </label>  
+            
+                {% endfor %}
 
-                </div>
             </div>
+        </div>
 
             
   
