--- a/map_app/templates/map.html
+++ b/map_app/templates/map.html
@@ -9,10 +9,36 @@
 
 <div class = "col-md mx-auto">
     
-    <div class="d-flex justify-content-center">
+    <div class="row justify-content-center">
+    <div class="col-8 d-flex justify-content-center">
         <iframe width="850" height="500" src="/enchanted-circle-map" style="border: 1px solid black"></iframe>
     </div>
     
+    <div class="col-2">
+        <!-- Currently: shows drop down of all bird species
+             Goal: will actively select birds for display/export -->
+        <button class="btn btn-secondary dropdown-toggle mx-1" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" data-bs-auto-close="false" aria-expanded="false">
+            Bird Species
+        </button>
+        
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" >
+            <div class="list-group" style="height: 30vh; overflow-y: scroll;">
+                
+                {% for bird in birds %}
+                <!-- Currently: can choose any bird.
+                        Goal: can choose only birds that are not protected. -->
+                <label class="list-group-item">
+                    <input class="form-check-input me-1" type="checkbox" value=" {{bird.speciesID}} ">
+                    {{bird.species}}
+                </label>  
+            
+                {% endfor %}
+
+            </div>
+        </div>
+    </div>
+    </div>
+
     
     <br/>
 
@@ -24,9 +50,12 @@
 
         <!-- Currently: Navigates to current page, refreshing and resetting everything
              Goal: Change to "update", and will apply chosen options -->
-        <a href="/map" class="btn btn-secondary mx-1">
-            Refresh
-        </a>
+        <form action="" method="post">
+        <button class="btn btn-secondary mx-1" type="submit">
+            Update
+        </button>
+        </form>
+
 
         <!-- Currently: does nothing
              Goal: will export the data currently shown on the screen -->
@@ -34,27 +63,7 @@
             Export Data
         </button>
 
-        <!-- Currently: shows drop down of all bird species
-             Goal: will actively select birds for display/export -->
-        <button class="btn btn-secondary dropdown-toggle mx-1" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-            Bird Species
-        </button>
         
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" >
-            <div class="list-group" style="height: 30vh; overflow-y: scroll;">
-                
-                {% for bird in birds %}
-                <!-- Currently: can choose any bird, list only stays up if the actual check box is selected.
-                     Goal: can choose only birds that are not protected, list stays up until box is selected again. -->
-                <label class="list-group-item">
-                    <input class="form-check-input me-1" type="checkbox" value=" {{bird.speciesID}} ">
-                    {{bird.species}}
-                </label>  
-            
-                {% endfor %}
-
-            </div>
-        </div>
 
             
   
