export button works

--- a/map_app/templates/map.html
+++ b/map_app/templates/map.html
@@ -21,7 +21,7 @@
             Bird Species
         </button>
         
-        <form action="/map/" method="post" id="birdForm">
+        <form action="/map/" method="post" id="birdForm" name="birdForm">
         {% csrf_token %}
         
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" >
@@ -67,9 +67,14 @@
 
         <!-- Currently: does nothing
              Goal: will export the data currently shown on the screen -->
-        <button class="btn btn-secondary mx-1">
-            Export Data
-        </button>
+        <form action="/download/" method="post" id="exportCSV">
+            {% csrf_token %}
+
+            <button class="btn btn-secondary mx-1" type="submit" name="exportCSVButton">
+                Export Data
+            </button>
+
+        </form>
 
         
 
