--- a/map_app/templates/map.html
+++ b/map_app/templates/map.html
@@ -20,8 +20,8 @@
         <div class="col-3">
             
             <!-- Search bar and search button -->
-            <div class = "container-fluid d-flex justify-content-center">
-                <input type="text" id="searchInput" onkeyup="liveSearch()" placeholder="Search">
+            <div class = "d-flex my-1">
+                <input class="w-100 rounded" type="text" id="searchInput" onkeyup="liveSearch()" placeholder="Search birds...">
             </div>
 
             <div class="form-floating text-start">
