--- a/map_app/templates/Instructions.html
+++ b/map_app/templates/Instructions.html
@@ -10,17 +10,40 @@
 
 <body>
 <h1>Instructions</h1>
-<p>Below, is an interactive tool that displays the health of an ecosystem.
-The heat map shows the amount of birds in a given area.  There are filters on the side of map that will allow for there 
-to be different aspects to be viewed separately or together. Select the bird species that you wish to view.  The map will 
-generate the data based on the selected birds (or all birds if no birds are selected in the filters).
-The + and - buttons at the top left allow you to zoom in and out of the map to get a better understanding of 
-the data that is being displayed. Feel free to interact with our button here.  
+    <p class="b">
+        Below, is an interactive tool that displays the health of an ecosystem.
+    The heat map shows the amount of birds in a given area.  There are filters on the side of map that will allow for there 
+    to be different aspects to be viewed separately or together. 
+    </br>
+        <ul class="b">
+            <li>
+                Click the select all to view all birds.
+            </li>
+            <li>
+                Click deselct all to uncheck the birds in the filter.
+            </li>
+            <li>
+                Enter the desired bird species into the search bar.
+            </li>
+            <li>
+                Click the + and - to zoom in and out.
+            </li>
+            <li>
+                Click view larger map to get the map in full screen mode.
+            </li>
+            <li>
+                Click update to update the map based on filtered bird values.
+            </li>
+            <li>
+                Click export data to export bird data into a comma seperated values file (CSV)
+            </li>
+
+        </ul>
 </p>
-</br>
-<a href="/map" class="btn btn-secondary" >
-    Map
-</a>
+
+<a type="button" class="btn btn-secondary btn-lg" href="/map">Map</a>
+</br></br></br></br></br></br></br></br>
+
 
 
 </body>
