--- a/map_app/templates/header.html
+++ b/map_app/templates/header.html
@@ -43,6 +43,10 @@
                 <ul class="navbar-nav mr-auto">
 
                     <li class="nav-item {% block homeactive %}{% endblock homeactive %}">
+                        <a class="nav-link" href="/">Home<span class="sr-only"></span></a>
+                    </li>
+
+                    <li class="nav-item {% block instructionsactive %}{% endblock instructionsactive %}">
                         <a class="nav-link" href="/instructions/">Instructions<span class="sr-only"></span></a>
                     </li>
 
