--- a/map_app/static/css/style.css
+++ b/map_app/static/css/style.css
@@ -25,11 +25,36 @@ h1{
 
 p{
     position: relative;
+    text-align: center;
     margin: 5% auto;
     width: 700px; 
     font-size: larger;
     background: rgba(255,255,255,0.85);
-    border-radius: 2px;      
+    border-radius: 2px;  
+    line-height: 1.8;
+}
+p.b{
+    position: relative;
+    text-align: left;
+    margin: 5% auto;
+    width: 700px; 
+    font-size: larger;
+    background: rgba(255,255,255,0.85);
+    border-radius: 5px;  
+    line-height: 1.8;
+}
+
+ul.b{
+    position: relative;
+    text-align: left;
+    margin: 5% auto;
+    width: 700px; 
+    font-size: larger;
+    background: rgba(255,255,255,0.85);
+    border-radius: 2px; 
+    line-height: 1.8;
+
+         
 }
 
 h3{
