--- a/map_app/templates/home.html
+++ b/map_app/templates/home.html
@@ -19,27 +19,22 @@
 </p>
 
 <p>
-    Wildfire is posing an increasing risk to landscapes, wildlife, and people across the Western United States. To address this growing need, the USDA Forest Service has developed the 10-year Wildfire Crisis Strategy, which aims to provide a science-based roadmap for creating safer and more fire-resilient landscapes and communities, reduce wildfire risk to critical infrastructure and natural resources, and foster strong collaboration across all lands. This project aims at building our understanding of wildlife, one natural resource, in priority landscapes for the 10-Year Wildfire Crisis Strategy.  
-
-Using bird monitoring data from a Forest Service partner (Bird Conservancy of the Rockies), we aim to understand two things:
-</br>
+    Wildfire is posing an increasing risk to landscapes, wildlife, and people across the Western United States. 
+    To address this growing need, the USDA Forest Service has developed the 10-year Wildfire Crisis Strategy, which aims to provide a science-based roadmap for creating safer and more fire-resilient landscapes and communities, reduce wildfire risk to critical infrastructure and natural resources, and foster strong collaboration across all lands. 
+    This project aims at building our understanding of wildlife, one natural resource, in priority landscapes for the 10-Year Wildfire Crisis Strategy.  
+    Using bird monitoring data from a Forest Service partner (Bird Conservancy of the Rockies), we aim to understand two things:
+</br></br>
 1.	What species are included in the baseline bird communities for priority landscapes selected to address the 10-Year Wildfire Crisis Strategy?
-</br>
+</br></br>
 2.	What are the current trends and drivers of trends for bird species within these priority landscapes where we have sufficient data?
-</br>
+</br></br>
 Building this baseline understanding will help us better understand how ongoing fire and fire-adaptive management will shape wildlife communities of landscapes across the Western USA. 
 
 </p>
 
-
-
-</br>
-<a href="/instructions" class="btn btn-secondary" >
-    Instructions
-</a>
-<a href="/map" class="btn btn-secondary" >
-    Map
-</a>
+<a type="button" class="btn btn-secondary btn-lg" href="/instructions">Instructions</a>
+<a type="button" class="btn btn-secondary btn-lg" href="/map">Map</a>
+</br></br></br></br></br></br></br></br>
 
 
 
